# lake-toba-monitoring

./: .gitignore  CMakeLists.txt  README.md  lakemon.ino  sdkconfig.old
.devcontainer/: devcontainer.json
main/: CMakeLists.txt  adc_app.c  analog_input.c  ble_client.c  ble_server.c  digital_debounce_input.c  digital_input.c  eeprom_app.c  esp_config.c  esp_controller.c  freq_input.c  gpio_app.c  i2c_app.c  main.c  modbus_app.c  mqtt_app.c  mqtt_auth.c  ntp_app.c  platform.c  power_management.c  provisioning.c  pulse_counter.c  rgb.c  sd_card.c  sensors.c  uart_app.c  wifi_app.c
main/Inc/: adc_app.h  analog_input.h  ble_client.h  ble_server.h  board.h  digital_debounce_input.h  digital_input.h  eeprom_app.h  esp_config.h  esp_controller.h  freq_input.h  gpio_app.h  i2c_app.h  modbus_app.h  mqtt_app.h  mqtt_auth.h  ntp_app.h  platform.h  power_management.h  provisioning.h  pulse_counter.h  rgb.h  sd_card.h  sensors.h  uart_app.h  wifi_app.h
