idf_component_register(SRCS "analog_input.c" "digital_debounce_input.c" "rgb.c" "mqtt_auth.c" "esp_config.c" "ble_server.c" "ble_client.c" "adc_app.c" "eeprom_app.c" "esp_controller.c"
                            "gpio_app.c" "i2c_app.c" "main.c" "modbus_app.c" "sd_card.c"
                            "mqtt_app.c" "ntp_app.c" "power_management.c" "uart_app.c" "wifi_app.c"
                             
                            "provisioning.c" "platform.c" "sensors.c" "digital_input.c"
                            "pulse_counter.c" "freq_input.c" 

INCLUDE_DIRS "." "Inc")


